--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "format": "rome format . --write"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "connectkit": "^1.5.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
     "viem": "^1.7.0",
     "wagmi": "~1.3.10"
   },
